--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Pran
 
 
-spring.datasource.url=jdbc:mysql://nozomi.proxy.rlwy.net:43331/pran
+spring.datasource.url=\${DB_URL}
 
 spring.datasource.username=\${DB_USER}
 spring.datasource.password=\${DB_PASSWORD}
