--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,9 @@ spring.datasource.password=\${DB_PASSWORD}
 
 #hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
+
+server.port=${PORT:8080}
 
 
 spring.mail.host=smtp.gmail.com
