--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 server.port=${PORT:8080}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.mail.host=smtp.gmail.com
