--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=Pran
 
 
-spring.datasource.url=\${DB_URL}
+# spring.datasource.url=\${DB_URL}
 
-spring.datasource.username=\${DB_USER}
-spring.datasource.password=\${DB_PASSWORD}
+# spring.datasource.username=\${DB_USER}
+# spring.datasource.password=\${DB_PASSWORD}
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/pranayuv
+spring.datasource.username=root
+spring.datasource.password=dhiraj888
 
 #hibernate
 spring.jpa.hibernate.ddl-auto=update
