--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=Pran
 
 spring.datasource.url=jdbc:mysql://localhost:3306/pranayuv
 spring.datasource.username=root
-spring.datasource.password=dhiraj888
+spring.datasource.password=your password
 
 #hibernate
 spring.jpa.hibernate.ddl-auto=update
